--- a/frontend/css/styles.css
+++ b/frontend/css/styles.css
@@ -66,7 +66,7 @@ html, body{
 }
 
 /* hide small screen buttons */
-#closebtn, #hamburgerIcon{
+#close-icon, #menu-icon{
     display: none;
 }  
 
@@ -106,7 +106,7 @@ html, body{
         transition: background-color 0.3s ease;
     }
 
-    #header img{
+    #header #logo{
         position: absolute;
         left: 6%;
         height: 95%;
@@ -115,7 +115,7 @@ html, body{
 
     /* navigation style */
     .navigation-links{
-        /* position: absolute; */
+        position: absolute;
         align-items: center;
     }
 
@@ -123,6 +123,7 @@ html, body{
         display: var(--display-flex);
         gap: 3em;
         align-items: center;
+        top: 0;
     }
 
     /* links style */
@@ -273,16 +274,6 @@ html, body{
         align-items: center;
     }
 
-    /* .aboutUs-container::before {
-        content: "";
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        background-color: rgba(0, 0, 0, 0.7);
-        z-index: -1;
-    } */
     .aboutUs-content-container{
         margin-left: 3%;
         width: 60%;
@@ -352,21 +343,9 @@ html, body{
         position: relative;
         z-index: 1;
         padding: 7% 10%;
-        /* background: url(/frontend/images/pexels-photo-2554128.webp); */
         background-image: linear-gradient(to bottom right, rgb(245, 254, 255), rgb(255, 255, 255));
         background-size: cover;
     }
-
-    /* .services::before {
-        content: "";
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        background-color: rgba(0, 0, 0, 0.2); 
-        z-index: -1; 
-    } */
 
     /* services grid layout */
     .our-services{
@@ -493,7 +472,131 @@ html, body{
 /* small tablets */
 @media (min-width: 768px) and (max-width: 991px)
 {
+/* header */
+    .header-section{
+        height: 13vh;
+    }
+
+    #header #logo{
+        left: 5%;
+        height: 95%;
+    }
+
+    #menu-icon, #close-icon{
+        color: black;
+        position: absolute;
+        width: 50px;
+        right: 8%;
+    }
+
+    /* blurry effect */
+    /* Blurry effect when active */
+    .blur {
+        filter: blur(10px);
+        pointer-events: none; /* Disable interaction with blurred content */
+    }
+
+    /* Hide the nav by default */
+    .navigation-links{
+        background-color: white;
+        display: none;
+        width: 100%;
+        height: 60vh;
+        top: 100%;
+        box-shadow: var(--box-shadow2);
+    }
+
+    /* Show the nav when active */
+    .navigation-links.active {
+        display: block;
+    }
+
+    #menu-icon{
+        display: block;
+    }
+
+    .navigation-list{
+        flex-direction: column;
+        padding-top: 10%;
+        color: black;
+    }
+
+    ul li a{
+        text-align: left;
+    }
+
+    /* home section */
+    .main-container{
+        width: var(--full-width);
+        height: 100vh;
+    }
+
+    #carouselExampleRide img{
+        height: 100%;
+    }
+
+    .carousel-inner img{
+        width: 100%;
+        height: 100%;
+        filter: brightness(50%);
+    }
+
+    /* carousel slides image captions */
+    .carousel-caption {   
+        position: absolute;
+        top: 50%;
+        text-align: left; 
+    }  
     
+    .carousel-caption h2, h3, p{
+        text-align: justify;
+        font-family: var(--font-style);
+        font-optical-sizing: auto;
+    }
+
+    .carousel-caption h2{
+        font-weight: bold;
+        font-size: 2rem;
+    }
+
+    .carousel-caption h3{
+        font-size: 1rem;
+    }
+
+    .carousel-caption p{
+        width: 600px;
+        font-size: large;
+        padding-top: 30px;
+    }
+
+
+    /* services section */
+     /* services grid layout */
+     .our-services{
+        margin: 0 auto;
+        padding: 10px;
+        width: 100%;
+        height: 100%;
+        grid-template-columns: repeat(2, 1fr);
+        column-gap: 20px;
+    }
+
+     /* carousel slides image captions */
+     /* .carousel-caption {   
+        
+    }  
+     
+    .carousel-caption h2{
+        
+    }
+
+    .carousel-caption h3{
+        
+    }
+
+    .carousel-caption p{
+        
+    } */
 }
 
 /* extra small devices */
