--- a/frontend/css/styles.css
+++ b/frontend/css/styles.css
@@ -531,10 +531,6 @@ html, body{
         height: 100vh;
     }
 
-    #carouselExampleRide img{
-        height: 100%;
-    }
-
     .carousel-inner img{
         width: 100%;
         height: 100%;
@@ -542,17 +538,20 @@ html, body{
     }
 
     /* carousel slides image captions */
+    .carousel-item{
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+    }
+
     .carousel-caption {   
         position: absolute;
         top: 50%;
         text-align: left; 
-    }  
+    } 
     
-    .carousel-caption h2, h3, p{
-        text-align: justify;
-        font-family: var(--font-style);
-        font-optical-sizing: auto;
-    }
+    
 
     .carousel-caption h2{
         font-weight: bold;
@@ -560,14 +559,16 @@ html, body{
     }
 
     .carousel-caption h3{
-        font-size: 1rem;
+        font-size: 1.2rem;
     }
 
     .carousel-caption p{
-        width: 600px;
-        font-size: large;
+        width: 500px;
+        font-size: 1em;
         padding-top: 30px;
     }
+
+
 
 
     /* services section */
