--- a/frontend/css/styles.css
+++ b/frontend/css/styles.css
@@ -446,20 +446,7 @@ ul li a{
         box-shadow: var(--box-shadow);
     }
 
-    #project1{
-        background: url(frontend/images/puertaondas__2_.webp);
-        background-size: cover;
-        background-position: center;
-    }
-
-    #project2{
-        background: url(frontend/images/142832171_3754835714568429_2152311612956246663_n.jpg);
-        background-size: cover;
-        background-position: center;
-    }
-
-    #project3{
-        background: url(frontend/images/795D8B77-7A4F-48C5-AD18-68C8209CE70D.jpeg);
-        background-size: cover;
-        background-position: center;
+    .project img{
+        width: 100%;
+        height: 100%;
     }
