--- a/frontend/css/responsive.css
+++ b/frontend/css/responsive.css
@@ -78,37 +78,58 @@
     font-size: small;
 }
 
-/* about section */
-.aboutUs-container{
-    flex-direction: column;
-    padding: 4% 2%;
-    align-items: flex-start;
+/* about us section */
+.aboutUs-content-container {
+    text-align: left;
+    max-width: 600px;
 }
 
-.aboutUs-content-container{
-    margin-left: 0;
-    width: 100%;
-    padding: 5%;
-    font-size: 1rem;
+.aboutUs-content-container h4, .services-content-container h4{
+    font-size: 1.5rem;
 }
 
 .aboutUs-content-container p{
+    font-weight: 1rem;
+}
+
+.history-container, .mission-container {
+    display: flex;
+    justify-content: space-around;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 40px;
+    height: 100%;
+}
+
+.history-left, .mission-right{
+    width: 80%;
     text-align: center;
 }
 
-#aboutUs-header, #services-header{
-    font-size: 1.2rem;
+.history-right, .mission-left{
+    height: 50%;
+    width:50%;
+    border-radius: 50%;
 }
 
-#aboutUs-subheader, #services-subheader{
-    font-size: 1rem;
-    margin-bottom: 5%;
+.history-right img, .mission-left img {
+    margin-top: 30px;
+    width: 100%;
+    height: 100%;
 }
 
-ul li i{
-    margin-left: -12%;
-    padding: 5px;
-    
+.history-container h4, .mission-container h4, .services-content-container h4, .projects-content-container h4{
+    color: #051f3b;
+    font-weight: bolder;
+    font-size: 1.5rem;
+    margin-bottom: 20px;
+    margin-top: 30px;
+}
+
+.history-left p, .mission-right p{
+    line-height: 1.3;
+    margin-bottom: 20px;
+    text-align: center;
 }
 
 /* services section */
