--- a/frontend/css/styles.css
+++ b/frontend/css/styles.css
@@ -268,104 +268,121 @@ ul li a{
     border: 1px solid #3a707c;
 }
 
-/* ABOUT SECTION */
-.aboutUs-container{
-    position: relative;
-    z-index: 1;
-    background-color: white;
-    min-height: auto;
-    padding: 8% 5%;
+/* about us section */
+.aboutUs-container {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     align-items: center;
+    padding: 50px 20px;
+    color: #051f3b;
 }
 
-    .aboutUs-content-container{
-        margin-left: 3%;
-        width: 60%;
-        color: black;
-        /* line-height: 20px; */
-        font-size: 1.2rem;
-    }
+.aboutUs-content-container {
+    text-align: left;
+    max-width: 800px;
+}
 
-    #aboutUs-header, #services-header, #projects-header{
-        color: rgb(13, 146, 117);
-        margin-bottom: 2%;
-    }
-    #aboutUs-subheader, #services-subheader, #projects-subheader{
-        color: black;
-        margin-bottom: 2%;
-    }
+.aboutUs-content-container h4{
+    font-weight: bold;
+    font-size: 3rem;
+}
 
-    .aboutUs-container h4::after {
-        content: "";
-        width: 120px;
-        height: 1px;
-        display: inline-block;
-        background: rgb(221, 54, 54);
-        margin: 4px 10px;
-        animation: changeBackgroundColor 2s infinite;
-    }
+.aboutUs-content-container p{
+    font-weight: 2rem;
+}
 
-    .services h4::after {
-        content: "";
-        width: 120px;
-        height: 1px;
-        display: inline-block;
-        background: rgb(221, 54, 54);
-        margin: 4px 10px;
-        animation: changeBackgroundColor 2s infinite;
-    }
+.history-container, .mission-container {
+    display: flex;
+    justify-content: center;
+    column-gap:5%;
+    margin-top: 40px;
+}
 
-    ul li i{
-        padding: 0.8rem;
-    }
+.history-container{
+    background-image: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
+    height: 60vh;
+}
 
-    /*  team images */
-    .team-images{
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        margin: 0 auto;
-        color: rgb(228, 215, 215);
-    }
+.history-right, .mission-left{
+    width: 30%;
+}
 
-    .team-images h5{
-        font-style: italic;
-        letter-spacing: 1px;
-        font-size: 0.8rem;
-    }
+.history-left, .mission-right{
+    width: 45%;
+}
 
-    .team-images img{
-        width: 18vw;
-        border-radius: 50%;
-    }
+.history-right, .mission-left{
+    width: 400px;
+    height: 300px;
+}
+
+.history-right img, .mission-left img {
+    margin-top: 30px;
+    width: 100%;
+    height: 100%;
+    border-radius: 8px;
+}
+
+.history-container h4, .mission-container h4 {
+    color: #051f3b;
+    font-weight: bolder;
+    font-size: 3rem;
+    margin-bottom: 20px;
+    margin-top: 80px;
+}
+
+.history-left p, .mission-right p{
+    line-height: 1.6;
+    margin-bottom: 20px;
+    text-align: left;
+}
+
 
     /* services section */
     .services{
         width: 100vw;
+        padding: 2px 50px;
         height: auto;
         z-index: 1;
-        padding: 6% 10%;
         background: linear-gradient(to bottom right, rgb(245, 254, 255), rgb(255, 255, 255));
     }
 
-    .services-content-container{
-        height: 100%;
+    .services-content-container h3, .projects-content-container h3{
+        margin-bottom: 20px;
+        margin-left: 5%;
     }
+
+    .services-content-container h4, .projects-content-container h4{
+        color: #051f3b;
+        font-weight: bolder;
+        font-size: 3rem;
+        margin-bottom: 20px;
+        margin-top: 50px;
+        margin-left: 5%;
+    }
+
+    /* .services h4::after {
+        content: "";
+        width: 120px;
+        height: 1px;
+        display: inline-block;
+        background: rgb(221, 54, 54);
+        margin: 4px 10px;
+        animation: changeBackgroundColor 2s infinite;
+    } */
 
     /* services grid layout */
     .our-services{
         margin: 0 auto;
         width: 90%;
-        height: 100%;
+        height: auto;
         display: grid;
         place-items: center;
         grid-template-columns: repeat(3, 1fr);
         grid-template-rows: auto;
         gap: 25px;
         align-items: stretch;
+        margin-bottom: 5%;
     }
 
     .service{  
@@ -382,7 +399,7 @@ ul li a{
     .service h6{
         font-size: 1.2rem;
         color: #2f92dd;
-        padding: 10px;
+        padding: 2px;
     }
 
     .service p{
@@ -422,7 +439,7 @@ ul li a{
     .projects-container{
         width: 100vw;
         height: auto;
-        padding: 6% 10%;
+        padding: 0 5%;
     }
 
     .our-projects{
