--- a/frontend/css/styles.css
+++ b/frontend/css/styles.css
@@ -30,6 +30,10 @@ html{
     scroll-behavior: smooth;
 }
 
+.no-scroll{
+    overflow: hidden;
+}
+
 /* scrollbar */
 ::-webkit-scrollbar {
   width: 12px;
@@ -103,6 +107,11 @@ html, body{
     height: auto;
     box-shadow: var(--box-shadow);
     transition: background-color 0.3s ease;
+}
+
+li a svg{
+    width: 36px;
+    background-color: #42b0d1;
 }
 
 .menu-button, .close-button{
@@ -300,11 +309,7 @@ ul li a{
 
 .history-container{
     background-image: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
-    height: 60vh;
-}
-
-.history-right, .mission-left{
-    width: 30%;
+    height: auto;
 }
 
 .history-left, .mission-right{
@@ -317,9 +322,9 @@ ul li a{
 }
 
 .history-right img, .mission-left img {
-    margin-top: 30px;
+    margin-top: 12px;
     width: 100%;
-    height: 100%;
+    height: 90%;
     border-radius: 8px;
 }
 
@@ -344,7 +349,10 @@ ul li a{
         padding: 2px 50px;
         height: auto;
         z-index: 1;
-        background: linear-gradient(to bottom right, rgb(245, 254, 255), rgb(255, 255, 255));
+        background: #005AA7;  /* fallback for old browsers */
+        background: -webkit-linear-gradient(to right, #FFFDE4, #005AA7);  /* Chrome 10-25, Safari 5.1-6 */
+        background: linear-gradient(to right, #FFFDE4, #005AA7); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+        
     }
 
     .services-content-container h3, .projects-content-container h3{
@@ -374,7 +382,7 @@ ul li a{
     /* services grid layout */
     .our-services{
         margin: 0 auto;
-        width: 90%;
+        width: 70%;
         height: auto;
         display: grid;
         place-items: center;
