--- a/frontend/css/animation.css
+++ b/frontend/css/animation.css
@@ -49,3 +49,14 @@
         background: lime;
     }
   }
+
+  /* image rotation */
+  @keyframes animate {
+    0% {
+      transform: perspective(1000px) rotateY(0deg);
+    }
+
+    100% {
+      transform: perspective(1000px) rotateY(360deg);
+    }
+  }
