--- a/frontend/css/styles.css
+++ b/frontend/css/styles.css
@@ -344,7 +344,8 @@ ul li a{
         padding: 2px 50px;
         height: auto;
         z-index: 1;
-        background: linear-gradient(to bottom right, rgb(245, 254, 255), rgb(255, 255, 255));
+        background: -webkit-linear-gradient(to right, #FFFDE4, #005AA7);
+        background: linear-gradient(to right, #FFFDE4, #005AA7);
     }
 
     .services-content-container h3, .projects-content-container h3{
@@ -443,15 +444,35 @@ ul li a{
     }
 
     .our-projects{
-        margin: 0 auto;
+        position: relative;
+        width: 200px;
+        height: 200px;
+        transform-style: preserve-3d;
+        animation: animate 20s linear infinite;
+    }
+
+    .our-projects span {
+        position: absolute;
+        top: 0;
+        left: 0;
         width: 100%;
         height: 100%;
-        display: grid;
-        place-items: center;
-        grid-template-columns: repeat(3, 1fr);
-        grid-template-rows: auto;
-        row-gap: 25px;
-        column-gap: 10px;
+        transform-origin: center;
+        transform-style: preserve-3d;
+        transform: rotateY(calc(var(--i) * 45deg)) translateZ(400px);
+        -webkit-box-reflect: below 0px
+         linear-gradient(transparent, transparent, #0004);
+    }
+
+    .our-projects span img{
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        border: 2px solid white;
+        border-radius: 18px;
+        height: 100%;
+        object-fit: cover;
     }
 
     .project{
