--- a/frontend/css/styles.css
+++ b/frontend/css/styles.css
@@ -349,10 +349,7 @@ ul li a{
         padding: 2px 50px;
         height: auto;
         z-index: 1;
-        background: #005AA7;  /* fallback for old browsers */
-        background: -webkit-linear-gradient(to right, #FFFDE4, #005AA7);  /* Chrome 10-25, Safari 5.1-6 */
-        background: linear-gradient(to right, #FFFDE4, #005AA7); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-        
+        background: linear-gradient(to bottom right, rgb(133, 229, 240), rgba(93, 114, 145, 0.89));
     }
 
     .services-content-container h3, .projects-content-container h3{
@@ -450,16 +447,45 @@ ul li a{
         padding: 0 5%;
     }
 
+    .projects-content-container{
+        height: 100%;
+        width: 90%;
+    }
+
+    .projects-content-container h3{
+        margin-bottom: 10%;
+    }
+
     .our-projects{
         margin: 0 auto;
+        width: 200px;
+        height: 200px;
+        transform-style: preserve-3d;
+        animation: animate 20s linear infinite;
+    }
+
+    .our-projects span {
+        position: absolute;
+        top: 0;
+        left: 0;
         width: 100%;
         height: 100%;
-        display: grid;
-        place-items: center;
-        grid-template-columns: repeat(3, 1fr);
-        grid-template-rows: auto;
-        row-gap: 25px;
-        column-gap: 10px;
+        transform-origin: center;
+        transform-style: preserve-3d;
+        transform: rotateY(calc(var(--i) * 45deg)) translateZ(400px);
+        -webkit-box-reflect: below 0px
+         linear-gradient(transparent, transparent, #0004);
+    }
+
+    .our-projects span img{
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        border: 2px solid white;
+        border-radius: 18px;
+        height: 100%;
+        object-fit: cover;
     }
 
     .project{
