--- a/frontend/css/styles.css
+++ b/frontend/css/styles.css
@@ -501,3 +501,13 @@ ul li a{
         width: 100%;
         height: 100%;
     }
+
+    /* contact us section */
+    .py-3{
+        margin-top: -15%;
+    }
+
+    .py-3 svg{
+        width: 15px;
+        height: 15px;
+    }
