--- a/frontend/css/styles.css
+++ b/frontend/css/styles.css
@@ -443,7 +443,7 @@ ul li a{
     /* projects section */
     .projects-container{
         width: 100vw;
-        height: auto;
+        height: 60vh;
         padding: 0 5%;
     }
 
@@ -453,13 +453,13 @@ ul li a{
     }
 
     .projects-content-container h3{
-        margin-bottom: 10%;
+        margin-bottom: 5%;
     }
 
     .our-projects{
         margin: 0 auto;
         width: 200px;
-        height: 200px;
+        height: 150px;
         transform-style: preserve-3d;
         animation: animate 20s linear infinite;
     }
@@ -491,8 +491,7 @@ ul li a{
     .project{
         position: relative;
         width: 95%;
-        height: 55vh;
-        padding-top: 10px;
+        padding-top: 5px;
         background-color: white;
         box-shadow: var(--box-shadow);
     }
@@ -503,11 +502,73 @@ ul li a{
     }
 
     /* contact us section */
-    .py-3{
-        margin-top: -15%;
+    .contact-us-container {
+        position: relative; 
+        overflow: hidden;
+        width: 100%;
+        height: auto;
     }
 
-    .py-3 svg{
-        width: 15px;
-        height: 15px;
+    .bg-map {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        z-index: 1;
     }
+
+    .map-overlay {
+        position: absolute; /* Position overlay on top of the map */
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0, 0, 0, 0.5); /* Dark overlay (adjust the last value for transparency) */
+        z-index: 2; /* Ensure it's above the map */
+    }
+
+    .bg-map iframe{
+        width: 100%;
+        height: 100%;
+    }
+
+    .contact-content {
+        margin-top: 10%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        color: white;
+        padding: 40px;
+    }
+
+    .contact-form{
+        margin: 0 auto;
+        z-index: 5;
+        position: relative;
+        width: 40%;
+        background-color: rgba(0, 0, 0, 0.5);
+        margin-bottom: 10%;
+    }
+
+    form{
+        display: flex;
+        flex-direction: column;
+        width: 80%;
+        margin: 0 auto;
+        padding: 50px;
+    }
+
+    form label{
+        color: white;
+        margin-bottom: 2%;
+    }
+
+    form input{
+        margin-bottom: 4%;
+        border: none;
+        border-bottom: 2px solid rgba(209, 233, 250, 0.329);
+        background-color: transparent;
+    }
+    
