--- a/frontend/css/responsive.css
+++ b/frontend/css/responsive.css
@@ -68,80 +68,116 @@
     }
 
     /* learn more/about us */
-#about-button, #contact-button, #services-button{
+    #about-button, #contact-button, #services-button{
     margin: 10px 0;
 
     /* button style */
-    width: 50vw;
-    letter-spacing: 1px;
-    padding: 0.5rem 1rem;
-    font-size: small;
-}
+        width: 50vw;
+        letter-spacing: 1px;
+        padding: 0.5rem 1rem;
+        font-size: small;
+    }
 
-/* about us section */
-.aboutUs-content-container {
-    text-align: left;
-    max-width: 600px;
-}
+    /* about us section */
+    .aboutUs-content-container {
+        text-align: left;
+        max-width: 600px;
+    }
 
-.aboutUs-content-container h4, .services-content-container h4{
-    font-size: 1.5rem;
-}
+    .aboutUs-content-container h4, .services-content-container h4{
+        font-size: 1.5rem;
+    }
 
-.aboutUs-content-container p{
-    font-weight: 1rem;
-}
+    .aboutUs-content-container p{
+        font-weight: 1rem;
+    }
 
-.history-container, .mission-container {
-    display: flex;
-    justify-content: space-around;
-    flex-direction: column;
-    align-items: center;
-    margin-top: 40px;
-    height: 100%;
-}
+    .history-container, .mission-container {
+        display: flex;
+        justify-content: space-around;
+        flex-direction: column;
+        align-items: center;
+        margin-top: 40px;
+        height: 100%;
+    }
 
-.history-left, .mission-right{
-    width: 80%;
-    text-align: center;
-}
+    .history-left, .mission-right{
+        width: 80%;
+        text-align: center;
+    }
 
-.history-right, .mission-left{
-    height: 50%;
-    width:50%;
-    border-radius: 50%;
-}
+    .history-right, .mission-left{
+        height: 50%;
+        width:50%;
+        border-radius: 50%;
+    }
 
-.history-right img, .mission-left img {
-    margin-bottom: 20px;
-    margin-top: 20px;
-    width: 100%;
-    height: 100%;
-}
+    .history-right img, .mission-left img {
+        margin-bottom: 20px;
+        margin-top: 20px;
+        width: 100%;
+        height: 100%;
+    }
 
-.history-container h4, .mission-container h4, .services-content-container h4, .projects-content-container h4{
-    color: #051f3b;
-    font-weight: bolder;
-    font-size: 1.5rem;
-    margin-bottom: 20px;
-    margin-top: 30px;
-}
+    .history-container h4, .mission-container h4, .services-content-container h4, .projects-content-container h4{
+        color: #051f3b;
+        font-weight: bolder;
+        font-size: 1.5rem;
+        margin-bottom: 20px;
+        margin-top: 30px;
+    }
 
-.history-left p, .mission-right p{
-    line-height: 1.3;
-    margin-bottom: 20px;
-    text-align: center;
-}
+    .history-left p, .mission-right p{
+        line-height: 1.3;
+        margin-bottom: 20px;
+        text-align: center;
+    }
 
-/* services section */
-.our-services{
-    grid-template-columns: repeat(1, 1fr);
-}
+    /* services section */
+    .our-services{
+        grid-template-columns: repeat(1, 1fr);
+    }
 
-/* projects section */
-.our-projects{
-    grid-template-columns: repeat(1, 1fr);
-}
+    /* projects section */
+    .projects-content-container h3{
+        width: 100%;    
+    }
+
+    .projects-container{
+        height: 70vh;
+    }
+
+    .our-projects{
+        margin-top: 30%;
+        width: 200px;
+    }
+
+    /* contact form */
+    .contact-form{
+        width: 90%;
+    }
+
+    .hire-us-form{
+        width: 70%;
+    }
+
+    #form-submit-btn{
+        width: 50%;
+        margin-left: 25%;
+    }
+
+    .our-projects span {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        transform-origin: center;
+        transform-style: preserve-3d;
+        transform: rotateY(calc(var(--i) * 45deg)) translateZ(200px);
+        -webkit-box-reflect: below 0px
+         linear-gradient(transparent, transparent, #0004);
+    }
 }
 
 /* extra small devices */
