--- a/frontend/css/responsive.css
+++ b/frontend/css/responsive.css
@@ -175,20 +175,25 @@
     }
 
     .hire-us-form{
-        width: 95%;
+        top: 60%;
+        width: 90%;
         height: auto;
     }
 
     form input, form textarea{
         font-size: 12px;
+        margin-bottom: 2%;
+        padding: 5px;
     }
 
     form h4{
         font-size: 1rem;
+        margin-bottom: 0;
     }
 
     form h3{
         font-size: 0.8rem;
+        margin-bottom: -10%;
     }
 
     #form-submit-btn{
