--- a/frontend/css/styles.css
+++ b/frontend/css/styles.css
@@ -349,7 +349,7 @@ ul li a{
         padding: 2px 50px;
         height: auto;
         z-index: 1;
-        background: linear-gradient(to bottom right, rgb(133, 229, 240), rgba(93, 114, 145, 0.89));
+        background: linear-gradient(to bottom right, rgb(240, 246, 247), rgba(93, 114, 145, 0.89));
     }
 
     .services-content-container h3, .projects-content-container h3{
@@ -502,7 +502,7 @@ ul li a{
     /* projects section */
     .projects-container{
         width: 100vw;
-        height: 60vh;
+        height: 90vh;
         padding: 0 5%;
     }
 
@@ -522,7 +522,7 @@ ul li a{
 
     .our-projects span {
         position: absolute;
-        top: 0;
+        top: 30%;
         left: 0;
         width: 100%;
         height: 100%;
@@ -544,25 +544,14 @@ ul li a{
         object-fit: cover;
     }
 
-    .project{
-        position: relative;
-        width: 95%;
-        padding-top: 5px;
-        background-color: white;
-        box-shadow: var(--box-shadow);
-    }
-
-    .project img{
-        width: 100%;
-        height: 100%;
-    }
-
     /* contact us section */
     .contact-us-container {
         position: relative; 
+        display: grid;
+        place-items: center;
         overflow: hidden;
         width: 100%;
-        height: auto;
+        height: 100vh;
     }
 
     .bg-map {
@@ -590,29 +579,34 @@ ul li a{
     }
 
     .contact-content {
-        margin-top: 10%;
+        margin-top: 2%;
         margin-bottom: -5%;
         display: flex;
         flex-direction: column;
         align-items: center;
         justify-content: center;
         color: white;
-        padding: 40px;
+        padding: 25px;
     }
 
     .contact-form{
-        margin: 0 auto;
-        z-index: 5;
         position: relative;
-        width: 30%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        z-index: 5;
+        margin: 0 auto;
+        width: 40vw;
+        height: 80vh;
         background-color: rgba(0, 0, 0, 0.5);
-        margin-bottom: 50px;
     }
 
     form{
         display: flex;
         flex-direction: column;
-        width: 80%;
+        width: 70%;
+        height: auto;
         margin: 0 auto;
         padding: 10px;
     }
@@ -623,20 +617,21 @@ ul li a{
         border-bottom: 2px solid rgba(209, 233, 250, 0.329);
         color: white;
         background-color: transparent;
-        padding: 10px;
-        margin-bottom: 4%;
+        padding: 5px;
+        margin-bottom: 3%;
+        font-size: 14px;
     }
 
     #form-submit-btn{
         padding: 10px;
-        width: 25%;
+        width: 10vw;
         height: auto;
         border: none;
         border-radius: 5px;
         background-color: #2f92dd;
         color: white;
-        margin-bottom: 30px;
-        margin-left: 35%;
+        font-size: 13px;
+        /* margin-bottom: 30px; */
     }
 
     #form-submit-btn:hover{
