--- a/frontend/css/styles.css
+++ b/frontend/css/styles.css
@@ -12,7 +12,7 @@
     --padding: 10px;
 
     --box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
-    --box-shadow2: 0 2px 5px rgba(0, 0, 0, 0.1);
+    --box-shadow2: 0 2px 5px rgba(0, 0, 0, 1);
 }
 
 /* colors */
@@ -105,7 +105,7 @@ html, body{
     justify-content: space-between;
     width: 100%;
     height: auto;
-    box-shadow: var(--box-shadow);
+    box-shadow: var(--box-shadow2);
     transition: background-color 0.3s ease;
 }
 
@@ -448,7 +448,7 @@ ul li a{
         width: 100vw;
         height: 100vh;
         background-color: rgba(0, 0, 0, 0.7); 
-        z-index: 998; 
+        z-index: 200; 
         display: none;
     }
     
@@ -465,25 +465,27 @@ ul li a{
 
     /* hire us section */
     .hire-us-content {
-        margin-top: 10%;
+        margin-top: 2%;
         margin-bottom: -5%;
         display: flex;
         flex-direction: column;
         align-items: center;
         justify-content: center;
         color: white;
-        padding: 40px;
+        padding: 25px;
     }
 
     .hire-us-form{
         display: none;
+        place-items: center;
         margin: 0 auto;
         z-index: 999;
         position: fixed; /* Keep form in place when scrolling */
-        top: 50%;
+        top: 55%;
         left: 50%;
         transform: translate(-50%, -50%);
-        width: 30%;
+        width: 40vw;
+        height: 80vh;
         background-color:  rgba(0, 0, 0, 0.5);
         margin-bottom: 50px;
         box-shadow: var(--box-shadow);
@@ -495,8 +497,8 @@ ul li a{
         outline: none;
         color:white;
         background-color: transparent;
-        padding: 10px;
-        margin-bottom: 4%;
+        padding: 5px;
+        margin-bottom: 3%;
     }
 
     /* projects section */
