emailJS setup complete on all forms

--- a/frontend/css/styles.css
+++ b/frontend/css/styles.css
@@ -640,3 +640,10 @@ ul li a{
         background-color: transparent;
         border: 2px solid  #2f92dd;
     }
+
+    /* Hide number input spinners in Chrome, Safari, Edge, and Opera */
+    input[type="number"]::-webkit-outer-spin-button,
+    input[type="number"]::-webkit-inner-spin-button {
+        -webkit-appearance: none;
+        margin: 0;
+    }
