--- a/frontend/css/responsive.css
+++ b/frontend/css/responsive.css
@@ -177,7 +177,7 @@
     .hire-us-form{
         top: 50%;
         width: 90%;
-        height: 60vh;
+        height: auto;
     }
 
     form input, form textarea{
@@ -199,6 +199,7 @@
     #form-submit-btn{
         width: 40vw;
         font-size: 10px;
+        margin-bottom: 20px;
     }
 
     .our-projects span {
